blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: blog
  name: hugo-deployment
  labels:
    app: hugo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hugo
  template:
    metadata:
      labels:
        app: hugo
    spec:
      containers:
        - env:
            - name: GITSYNC_REPO
              value: "http://github.com/sachiniyer/blog.git"
            - name: GITSYNC_BRANCH
              value: main
            - name: GITSYNC_ROOT
              value: "/data/hugo"
            - name: GITSYNC_WAIT
              value: "100"
            - name: GITSYNC_HTTP_BIND
              value: "0.0.0.0:90"
            - name: GITSYNC_WEBHOOK_SYNC
              value: "1"
            - name: GITSYNC_MAX_FAILURES
              value: "-1"
            - name: GITSYNC_DEPTH
              value: "1"
            - name: GITSYNC_SUBMODULES
              value: "recursive"
          image: sachiyer/git-sync:latest
          imagePullPolicy: Always
          name: git-sync
          ports:
            - containerPort: 90
              name: sync
              protocol: TCP
          volumeMounts:
            - mountPath: "/data"
              name: data
        - name: hugo
          image: sachiyer/hugo-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - emptyDir: {}
          name: data
