blog/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: blog
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: blog-redirect@kubernetescrd
spec:
  tls:
    - secretName: blog-cert
  rules:
    - host: blog.sachiniyer.com
      http:
        paths:
          - path: /sync
            pathType: Prefix
            backend:
              service:
                name: hugo-service
                port:
                  number: 90
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hugo-service
                port:
                  number: 80
